[package]
name = "fractionfree"
version = "0.1.3"
edition = "2021"
license-file = "LICENSE.md"
description = "Fraction-free linear algebra for ndarray"
repository = "https://github.com/carlhammann/fractionfree"
keywords = ["ndarray", "linear-algebra", "matrix", "integer" ]
categories = ["algorithms", "mathematics" ]

[dependencies]
ndarray = "0.15.6"
num-integer = "0.1.46"
num-traits = "0.2.18"
